--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ BackEnd/CoursesWebApp/.vs/CoursesWebApp/FileContentIndex/9a5848b6-d8e4-4870-8a66
 *.pdb
 *.cache
 *.json
+/BackEnd/CoursesWebApp/obj/Debug
