--- a/BackEnd/CoursesWebApp.Application/CoursesWebApp.Application.csproj
+++ b/BackEnd/CoursesWebApp.Application/CoursesWebApp.Application.csproj
@@ -16,4 +16,8 @@
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.4" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\CoursesWebApp.Domain\CoursesWebApp.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
