Delete inheritance in IRepository
 - Create folder for Services in Infrastructure layer
- Create folder for Repositories in Application layer

--- a/BackEnd/CoursesWebApp.Application/CoursesWebApp.Application.csproj
+++ b/BackEnd/CoursesWebApp.Application/CoursesWebApp.Application.csproj
@@ -20,4 +20,8 @@
     <ProjectReference Include="..\CoursesWebApp.Domain\CoursesWebApp.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Repository\" />
+  </ItemGroup>
+
 </Project>
