--- a/BackEnd/CoursesWebApp.Infrastructure/CoursesWebApp.Infrastructure.csproj
+++ b/BackEnd/CoursesWebApp.Infrastructure/CoursesWebApp.Infrastructure.csproj
@@ -16,4 +16,12 @@
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.4" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\CoursesWebApp.Application\CoursesWebApp.Application.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Services\" />
+  </ItemGroup>
+
 </Project>
