Created DbContext and NewsService

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ BackEnd/CoursesWebApp/.vs/CoursesWebApp/FileContentIndex/9a5848b6-d8e4-4870-8a66
 *.cache
 *.json
 /BackEnd/CoursesWebApp/obj/Debug
+BackEnd/CoursesWebApp/appsettings.json
