Add application constants
- remake a course interface

--- a/BackEnd/CoursesWebApp.Domain/CoursesWebApp.Domain.csproj
+++ b/BackEnd/CoursesWebApp.Domain/CoursesWebApp.Domain.csproj
@@ -16,4 +16,8 @@
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.4" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Constants\" />
+  </ItemGroup>
+
 </Project>
