Create Student Configuration

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ BackEnd/CoursesWebApp/.vs/CoursesWebApp/FileContentIndex/9a5848b6-d8e4-4870-8a66
 *.json
 /BackEnd/CoursesWebApp/obj/Debug
 BackEnd/CoursesWebApp/appsettings.json
+appsettings.json
