Create Redis Service Interface

--- a/BackEnd/CoursesWebApp.Infrastructure/CoursesWebApp.Infrastructure.csproj
+++ b/BackEnd/CoursesWebApp.Infrastructure/CoursesWebApp.Infrastructure.csproj
@@ -25,4 +25,10 @@
     <ProjectReference Include="..\CoursesWebApp.Application\CoursesWebApp.Application.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Caching\Decorators\" />
+    <Folder Include="Caching\Abstract\" />
+    <Folder Include="Caching\RedisServices\" />
+  </ItemGroup>
+
 </Project>
