--- a/BackEnd/CoursesWebApp.Infrastructure/CoursesWebApp.Infrastructure.csproj
+++ b/BackEnd/CoursesWebApp.Infrastructure/CoursesWebApp.Infrastructure.csproj
@@ -19,6 +19,7 @@
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="8.0.0" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.4" />
+    <PackageReference Include="StackExchange.Redis" Version="2.8.16" />
   </ItemGroup>
 
   <ItemGroup>
@@ -28,7 +29,6 @@
   <ItemGroup>
     <Folder Include="Caching\Decorators\" />
     <Folder Include="Caching\Abstract\" />
-    <Folder Include="Caching\RedisServices\" />
   </ItemGroup>
 
 </Project>
