--- a/BackEnd/CoursesWebApp.Domain/CoursesWebApp.Domain.csproj
+++ b/BackEnd/CoursesWebApp.Domain/CoursesWebApp.Domain.csproj
@@ -19,6 +19,7 @@
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="8.0.0" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.4" />
+    <PackageReference Include="Scrutor" Version="5.0.1" />
   </ItemGroup>
 
   <ItemGroup>
