Add Lessons for get course by id

--- a/BackEnd/CoursesWebApp.Application/CoursesWebApp.Application.csproj
+++ b/BackEnd/CoursesWebApp.Application/CoursesWebApp.Application.csproj
@@ -27,7 +27,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Repository\" />
+    <Folder Include="UseCases\Abstract\" />
   </ItemGroup>
 
 </Project>
