Update base use case, create get news use case

--- a/BackEnd/CoursesWebApp.Application/CoursesWebApp.Application.csproj
+++ b/BackEnd/CoursesWebApp.Application/CoursesWebApp.Application.csproj
@@ -28,6 +28,7 @@
 
   <ItemGroup>
     <Folder Include="UseCases\Abstract\" />
+    <Folder Include="UseCases\NewsUseCases\" />
   </ItemGroup>
 
 </Project>
