Create DI for Students, Courses, Lessons Use Cases

--- a/BackEnd/CoursesWebApp.Application/CoursesWebApp.Application.csproj
+++ b/BackEnd/CoursesWebApp.Application/CoursesWebApp.Application.csproj
@@ -26,4 +26,9 @@
     <ProjectReference Include="..\CoursesWebApp.Domain\CoursesWebApp.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="UseCases\LessonUseCase\" />
+    <Folder Include="UseCases\Dependencies\" />
+  </ItemGroup>
+
 </Project>
