Create View Models for News contracts
- Add News Responce record
- Add News Request record

--- a/BackEnd/CoursesWebApp/CoursesWebApp.API.csproj
+++ b/BackEnd/CoursesWebApp/CoursesWebApp.API.csproj
@@ -33,6 +33,8 @@
 
   <ItemGroup>
     <Folder Include="Controllers\" />
+    <Folder Include="DTO\Request\NewsDTO\" />
+    <Folder Include="DTO\Responce\NewsDTO\" />
   </ItemGroup>
 
 </Project>
