Create ViewModels for Students contracts
- Add Student Responce record
- Add Student Request record

--- a/BackEnd/CoursesWebApp/CoursesWebApp.API.csproj
+++ b/BackEnd/CoursesWebApp/CoursesWebApp.API.csproj
@@ -33,6 +33,7 @@
 
   <ItemGroup>
     <Folder Include="Controllers\" />
+    <Folder Include="DTO\Request\StudentDTO\" />
     <Folder Include="DTO\Request\NewsDTO\" />
     <Folder Include="DTO\Responce\NewsDTO\" />
   </ItemGroup>
